# csfwctl

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  csfwctl-project-plan.md  pyproject.toml
.github/workflows/: ci.yml  live-validation.yml
csfwctl/: __init__.py  __main__.py  applier.py  apply_cmd.py  cli.py  config.py  diff_cmd.py  differ.py  drift_cmd.py  exporter.py  fixtures.py  import_cmd.py  linter.py  loader.py  notify_test_cmd.py  observability.py  precedence_cmd.py  precedence_resolver.py  record_fixtures_cmd.py  resolver.py  safety.py  status.py  status_cmd.py  validate_cmd.py
csfwctl/falcon/: __init__.py  client.py  host_groups.py  locations.py  policies.py  rule_groups.py
csfwctl/notifiers/: __init__.py  console.py  gitlab.py  log.py  syslog.py  teams.py
csfwctl/schema/: __init__.py  _common.py  location.py  policy.py  policy_settings.py  precedence.py  rule.py  rule_group.py  tombstone.py  tool_config.py
docs/: architecture.md  cli_reference.md  config-repo-ci.md  notifications.md  operations.md  schema_reference.md
tests/: conftest.py
tests/fixtures/config_repos/minimal/: csfwctl.toml  tombstones.yaml
tests/fixtures/config_repos/minimal/policies/: abc01-endpoints-windows.yaml
tests/fixtures/config_repos/minimal/rule_groups/: windows-baseline.yaml
tests/fixtures/config_repos/realistic/: csfwctl.toml  precedence.yaml  tombstones.yaml
tests/fixtures/config_repos/realistic/locations/: corp-vpn.yaml
tests/fixtures/config_repos/realistic/policies/: abc01-endpoints-mac.yaml  abc01-endpoints-windows.yaml  research-lab-7-windows.yaml
tests/fixtures/config_repos/realistic/rule_groups/: mac-baseline.yaml  windows-baseline.yaml  windows-remote-access.yaml
tests/integration/: test_live_rule_group.py
tests/unit/: test_applier.py  test_apply_cmd.py  test_config.py  test_diff_cmd.py  test_differ.py  test_drift_cmd.py  test_exporter.py  test_exporter_translation.py  test_falcon_client.py  test_falcon_isolation.py  test_falcon_subclients.py  test_fixtures.py  test_import_cmd.py  test_linter.py  test_loader.py  test_notifiers.py  test_observability.py  test_precedence_cmd.py  test_precedence_resolver.py  test_safety.py  test_schema_common.py  test_schema_misc.py  test_schema_policy.py  test_schema_rule.py  test_smoke.py  test_sprint11.py  test_status.py  test_status_cmd.py  test_validate_cmd.py
