[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "csfwctl"
version = "0.0.1"
description = "Config-as-code management for CrowdStrike Falcon firewall policies, rule groups, and locations."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "csfwctl contributors" }]
keywords = ["crowdstrike", "falcon", "firewall", "config-as-code"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Firewalls",
]
dependencies = [
    "crowdstrike-falconpy>=1.4",
    "pydantic>=2.6",
    "ruamel.yaml>=0.18",
    "typer>=0.12",
    "rich>=13.7",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
csfwctl = "csfwctl.cli:app"

[project.urls]
Homepage = "https://github.com/msiroskey/csfwctl"
Issues = "https://github.com/msiroskey/csfwctl/issues"

[tool.hatch.build.targets.wheel]
packages = ["csfwctl"]

[tool.hatch.build.targets.sdist]
include = [
    "/csfwctl",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/Makefile",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["csfwctl"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
files = ["csfwctl"]

# Per-module ignores for untyped third-party libs (falconpy, ruamel.yaml)
# will land alongside their first imports in later phases.

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
markers = [
    "integration: tests that replay recorded API fixtures",
]

[tool.coverage.run]
source = ["csfwctl"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
